--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "firebase": "^9.8.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
@@ -15,6 +16,8 @@
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.7",
     "react-swipeable": "^7.0.0",
+    "sass": "^1.53.0",
+    "sass-loader": "^13.0.2",
     "swiper": "^8.2.6",
     "web-vitals": "^2.1.4"
   },
