--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "bootstrap": "^5.1.3",
     "firebase": "^9.8.4",
     "firebase-tools": "^9.23.3",
+    "framer-motion": "^6.4.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
+    "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.3.5",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.7",
